@@ -39,6 +39,7 @@ Revision history for FusionInventory::Agent
        * Inventory: add VMVERSION, VMPRODUCT and VMFULLNAME key in HARDWARE
        * Inventory: improve POD documentation
        * Inventory: Display a debug message if the STORAGES/INTERFACE is invalid
+       * backport from master FusionInventory::Agent::Tools::getCanonicalManufacturer()
 
 2.1.7  Sun, 12 Dec 2010 20:05:16 +01000
        * RPC: Better message if access is denied
